--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="inner">
 
         <header>
-          <h1>bkarrlander.GitHub.io</h1>
+          <h1>bkarrlander.github.io</h1>
           <h2>Memento verso ultimo</h2>
         </header>
 
