--- a/index.htm
+++ b/index.htm
@@ -1,5 +1,5 @@
 <html>
 <body>
-bkarrlander.github.io
+  <div style="display:inline-block;margin:0 auto">bkarrlander.github.io</div>
 </body>
 </html>
