--- a/index.htm
+++ b/index.htm
@@ -1,5 +1,29 @@
 <html>
+  <head>
+    <style>
+      html { font-size: 1.2em; font-family: serif }
+      body { margin: 0 }
+      div { text-align:center; padding: 60px 0; }
+      .code { 
+        font-family: consolas, courier, courier new; 
+        font-size: 1em;
+      }
+      @media (min-width: 600px) {
+        .code { 
+          font-size: 1.8em;
+        }
+      }
+      @media (min-width: 800px) {
+        .code { 
+          font-size: 2.3em;
+        }
+      }
+    </style>
+  </head>
 <body>
-  <div style="width:200px;text-align:center;margin:0 auto">bkarrlander.github.io</div>
+  <div><b>bkarrlander.github.io</b></div>
+  <div class="code" style="background: #222">
+    <p style="color: aqua">CamelCaseIsThisEasyToRead</p>
+    <p style="color: orange">snake_case_is_this_easy_to_read</p>
 </body>
 </html>
