--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
       body { margin: 0 }
       div { text-align:center; padding: 60px 0; }
       .code { 
-        font-family: consolas, courier, courier new; 
+        font-family: monospace; 
         font-size: 1em;
       }
       @media (min-width: 600px) {
