--- a/index.htm
+++ b/index.htm
@@ -1,8 +1,8 @@
 <html>
   <head>
     <style>
-      html { font-size: 1.2em; font-family: serif }
-      body { margin: 0 }
+      html { font-size: 1.2em; font-family: serif; color: #fff }
+      body { margin: 0; background: #222; }
       div { text-align:center; padding: 60px 0; }
       .code { 
         font-family: monospace; 
