--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,7 @@
 <html>
   <head>
     <style>
-      html { font-size: 1.2em; font-family: serif; color: #fff }
+      html { font-size: 1.2em; font-family: sans-serif; color: #fff }
       body { margin: 0; background: #222; }
       div { text-align:center; padding: 60px 0; }
       .code { 
@@ -22,7 +22,7 @@
   </head>
 <body>
   <div><b>bkarrlander.github.io</b></div>
-  <div class="code" style="background: #444">
+  <div class="code" style="background: #2b2b2b">
     <p style="color: aqua">CamelCaseIsThisEasyToRead</p>
     <p style="color: orange">snake_case_is_this_easy_to_read</p>
 </body>
