--- a/index.htm
+++ b/index.htm
@@ -1,29 +1,12 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <style>
-      html { font-size: 1.2em; font-family: sans-serif; color: #fff }
-      body { margin: 0; background: #222; }
-      div { text-align:center; padding: 60px 0; }
-      .code { 
-        font-family: monospace; 
-        font-size: 1em;
-      }
-      @media (min-width: 600px) {
-        .code { 
-          font-size: 1.8em;
-        }
-      }
-      @media (min-width: 800px) {
-        .code { 
-          font-size: 2.3em;
-        }
-      }
-    </style>
+  <head>  
+    <title>bkarrlander.github.io</title>
   </head>
-<body>
-  <div><b>bkarrlander.github.io</b></div>
-  <div class="code" style="background: #2b2b2b">
-    <p style="color: aqua">CamelCaseIsThisEasyToRead</p>
-    <p style="color: orange">snake_case_is_this_easy_to_read</p>
-</body>
+  <body style="text-align: center; font-family: monospace">
+    <h1>bkarrlander.github.io</h1>
+    <p>CamelCaseIsThisEasyToRead</p>
+    <p>snake_case_is_this_easy_to_read</p>
+    <p>________</p>
+  </body>  
 </html>
