--- a/index.htm
+++ b/index.htm
@@ -2,6 +2,7 @@
 <html>
   <head>  
     <title>bkarrlander.github.io</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1"> 
   </head>
   <body style="text-align: center; font-family: monospace">
     <h1>bkarrlander.github.io</h1>
