--- a/index.htm
+++ b/index.htm
@@ -2,12 +2,11 @@
 <html>
   <head>  
     <title>bkarrlander.github.io</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1" /> 
   </head>
-  <body style="text-align: center; font-family: monospace">
-    <h1>bkarrlander.github.io</h1>
-    <p>CamelCaseIsThisEasyToRead</p>
-    <p>snake_case_is_this_easy_to_read</p>
-    <p>________</p>
+  <body style="font-family: monospace; background: #000; color: #fff">
+    <p style="color:lime">bkarrlander.github.io</p>
+    <p>$ CamelCaseIsThisEasyToRead</p>
+    <p>$ snake_case_is_this_easy_to_read</p>
   </body>  
 </html>
