--- a/index.htm
+++ b/index.htm
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html>
-  <head>  
-    <title>bkarrlander.github.io</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1"> 
-  </head>
-  <body style="font-family: monospace;">
-    <a style="" href="https://bkarrlander.github.io/">bkarrlander.github.io</a>
-    <p>CamelCaseIsThisEasyToRead</p>
-    <p>snake_case_is_this_easy_to_read</p>
-  </body>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width">
+	<meta name="author" content="@bkarrlander">
+	<meta name="description" content="CamelCaseIsThisEasyToRead
+snake_case_is_this_easy_to_read">
+	<meta property="og:url" content="http://bkarrlander.github.io">
+	<meta property="og:title" content="A case for snakes">
+	<meta property="og:site_name" content="bkarrlander.github.io">
+	<meta property="og:description" content="A case for snakes">
+	<meta name="twitter:card" content="summary">
+	<meta name="twitter:title" content="A case for snakes">
+	<meta name="twitter:description" content="CamelCaseIsThisEasyToRead
+snake_case_is_this_easy_to_read">
+	<meta name="twitter:creator" content="@bkarrlander">
+	<title>A case for snakes</title>
+	<style type="text/css">body {font-family: sans-serif; font-size: 1.1em; line-height: 1.5em; max-width: 45em; margin: auto; padding: 0 2%;} img {max-width: 100%; display: block; margin: .75em auto;}</style>
+</head>
+<body>
+  <a href="https://bkarrlander.github.io/">bkarrlander.github.io</a>
+  <h1>A case for snakes</h1>
+  <p><code>CamelCaseIsThisEasyToRead</code></p>
+  <p><code>snake_case_is_this_easy_to_read</code></p>
+</body>
 </html>
