--- a/index.htm
+++ b/index.htm
@@ -19,7 +19,7 @@ snake_case_is_this_easy_to_read">
 	<style type="text/css">body {font-family: sans-serif; font-size: 1.1em; line-height: 1.5em; max-width: 45em; margin: auto; padding: 0 2%;} img {max-width: 100%; display: block; margin: .75em auto;}</style>
 </head>
 <body>
-  <a href="https://bkarrlander.github.io/">bkarrlander.github.io</a>
+  <p><a href="https://bkarrlander.github.io/">bkarrlander.github.io</a></p>
   <h1>A case for snakes</h1>
   <p><code>CamelCaseIsThisEasyToRead</code></p>
   <p><code>snake_case_is_this_easy_to_read</code></p>
