--- a/index.htm
+++ b/index.htm
@@ -19,9 +19,14 @@ snake_case_is_this_easy_to_read">
 	<style type="text/css">body {font-family: sans-serif; font-size: 1.1em; line-height: 1.5em; max-width: 45em; margin: auto; padding: 0 2%;} img {max-width: 100%; display: block; margin: .75em auto;}</style>
 </head>
 <body>
+	<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v18.0" nonce="TEUqdBgi"></script>
+	
   <p><a href="https://bkarrlander.github.io/">bkarrlander.github.io</a></p>
   <h1>A case for snakes</h1>
   <p><code>CamelCaseIsThisEasyToRead</code></p>
   <p><code>snake_case_is_this_easy_to_read</code></p>
+
+	<div class="fb-page" data-href="https://www.facebook.com/facebook" data-tabs="timeline" data-width="" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/facebook" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/facebook">Facebook</a></blockquote></div>
 </body>
 </html>
