--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!-- Start cookieyes banner --> <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/8ef68e9eabd11412069f9762/script.js"></script> <!-- End cookieyes banner -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<meta name="author" content="@bkarrlander">
